remove unneeded phtoos, finishing deleteDoctor end point with its related docs and tests
